--- a/gratulujeme.html
+++ b/gratulujeme.html
@@ -51,13 +51,13 @@
     }
     </script>
     <meta http-equiv="content-security-policy" content="">
-		<link href="./_app/immutable/assets/_layout-63d87ff5.css" rel="stylesheet">
-		<link rel="modulepreload" href="./_app/immutable/start-5296e84f.js">
+		<link href="./_app/immutable/assets/_layout-91c570b8.css" rel="stylesheet">
+		<link rel="modulepreload" href="./_app/immutable/start-31ebb8c6.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/index-f71fcd82.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/singletons-b6e546a3.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/index-4bfa7427.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/control-e7f5239e.js">
-		<link rel="modulepreload" href="./_app/immutable/components/pages/_layout.svelte-30edec58.js">
+		<link rel="modulepreload" href="./_app/immutable/components/pages/_layout.svelte-9096e973.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/stores-d4fc842c.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/stores-c713c1dd.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/Transition-adb530ea.js">
@@ -96,7 +96,7 @@
       <main><div><section class="relative mx-auto py-6 sm:py-10 px-6 max-w-6xl text-blue-web"><div class=""><div class="text-3xl lg:text-4xl text-center">🎉 Gratulujeme k nákupu vstupenek!
     </div>
     <div class="mt-4 text-lg text-center">Najdeš je v mailu nebo na stránce <a href="/vstupenky" class="underline hover:no-underline">vstupenky</a></div>
-    <div class="flex mt-6"><img class="m-auto w-auto lg:max-w-3xl" src="/gifs/funny-celebrate-4.gif"></div>
+    <div class="flex mt-6"><img class="m-auto w-auto lg:max-w-3xl" src="/gifs/funny-celebrate-8.gif"></div>
     <div class="mt-10 text-xl text-center mt-6">Co teď? Poděl se o tu radost s ostatními <a href="https://twitter.com/intent/tweet?text=M%C3%A1m%20l%C3%ADstek%20na%20%40utxoprague%20%F0%9F%8E%89%20Poj%C4%8F%20taky%21%0A%20%23utxo22" class="underline hover:no-underline" target="_blank">tweetem</a></div>
     <div class="text-xl text-center mt-6">Prohlédni si <a href="/program" class="underline hover:no-underline">aktuální program</a></div>
     <div class="text-xl text-center mt-6">Sleduj novinky na <a href="https://twitter.com/utxoprague" class="underline hover:no-underline" target="_blank">Twitteru</a> <i class="fa-brands fa-twitter"></i></div></div></section></div></main></div>
@@ -107,7 +107,7 @@
         </div>
         <div class="mt-4"><a href="https://docs.utxo.cz" class="hover:text-custom-green" target="_blank" rel="noreferrer"><i class="fas fa-book"></i>  Dokumentace</a></div></div>
       <div class="sm:mt-0 mt-6 sm:w-1/3 mr-2"></div></div>
-    <div class="relative mx-auto px-6 pt-10 pb-6 max-w-6xl text-xs opacity-50 sm:flex"><div class="flex-1 mt-2 mb-2"><i class="fas fa-heart text-red-500"></i> S láskou organizuje
+    <div class="relative mx-auto px-6 pt-10 pb-6 max-w-7xl text-xs opacity-50 sm:flex"><div class="flex-1 mt-2 mb-2"><i class="fas fa-heart text-red-500"></i> S láskou organizuje
         <a href="https://utxo.foundation" class="underline hover:no-underline" target="_blank" rel="noreferrer">UTXO Foundation, z.s.</a></div>
       <div><a href="https://github.com/utxo-foundation/utxo23-web" target="_blank" rel="noreferrer"><span class="font-bold">v1.9.0</span></a>
         | powered by
@@ -116,14 +116,14 @@
         <a href="https://www.ppmedia.cz/" target="_blank" rel="noreferrer"><img src="/img/pen-production-logo.svg" class="w-28 inline-block pb-2 ml-1" alt="Pen&Production"></a></div></div></div></div>
 
 
-		<script type="module" data-sveltekit-hydrate="lrjgf2">
-			import { start } from "./_app/immutable/start-5296e84f.js";
+		<script type="module" data-sveltekit-hydrate="14hsawj">
+			import { start } from "./_app/immutable/start-31ebb8c6.js";
 
 			start({
 				env: {},
 				paths: {"assets":"","base":""},
-				target: document.querySelector('[data-sveltekit-hydrate="lrjgf2"]').parentNode,
-				version: "1677486698101",
+				target: document.querySelector('[data-sveltekit-hydrate="14hsawj"]').parentNode,
+				version: "1677488914716",
 				hydrate: {
 					node_ids: [0, 5],
 					data: [null,null],
