--- a/index.html
+++ b/index.html
@@ -51,21 +51,21 @@
     }
     </script>
     <meta http-equiv="content-security-policy" content="">
-		<link href="./_app/immutable/assets/_layout-63d87ff5.css" rel="stylesheet">
+		<link href="./_app/immutable/assets/_layout-91c570b8.css" rel="stylesheet">
 		<link href="./_app/immutable/assets/SvelteTooltip-456285a5.css" rel="stylesheet">
-		<link rel="modulepreload" href="./_app/immutable/start-5296e84f.js">
+		<link rel="modulepreload" href="./_app/immutable/start-31ebb8c6.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/index-f71fcd82.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/singletons-b6e546a3.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/index-4bfa7427.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/control-e7f5239e.js">
-		<link rel="modulepreload" href="./_app/immutable/components/pages/_layout.svelte-30edec58.js">
+		<link rel="modulepreload" href="./_app/immutable/components/pages/_layout.svelte-9096e973.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/stores-d4fc842c.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/stores-c713c1dd.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/Transition-adb530ea.js">
 		<link rel="modulepreload" href="./_app/immutable/modules/pages/_layout.js-3beef184.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/bundle-6957d3f5.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/_layout-973f4a48.js">
-		<link rel="modulepreload" href="./_app/immutable/components/pages/_page.svelte-672ba8b2.js">
+		<link rel="modulepreload" href="./_app/immutable/components/pages/_page.svelte-490286f3.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/Avatar-f340785b.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/Link-53db9fe6.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/marked.esm-0b02a870.js"><title>UTXO.23 - Otevřená komunitní kryptoměnová konference</title><!-- HEAD_svelte-1y6gd31_START --><!-- HEAD_svelte-1y6gd31_END -->
@@ -408,59 +408,20 @@
 
 
 
+<div class="w-16 h-16 text-center"><img src="https://spec.utxo.cz/23/photos/speakers/jan-cerny-web.jpg" class="w-16 h-16 rounded-lg m-auto" alt="Jan Černý"></div>
+
+
+
+
+
+
+
+
+
+
+
+
 <div class="w-16 h-16 text-center"><img src="https://spec.utxo.cz/23/photos/speakers/huge-web.jpg" class="w-16 h-16 rounded-lg m-auto" alt="Huge"></div>
-
-
-
-
-
-
-
-
-
-
-
-
-<div class="w-16 h-16 text-center"><img src="https://spec.utxo.cz/23/photos/speakers/hynek-jina-web.jpg" class="w-16 h-16 rounded-lg m-auto" alt="Hynek Jína"></div>
-
-
-
-
-
-
-
-
-
-
-
-
-<div class="w-16 h-16 text-center"><img src="https://spec.utxo.cz/23/photos/speakers/jiri-skrivan-web.jpg" class="w-16 h-16 rounded-lg m-auto" alt="Jiří Skřivan"></div>
-
-
-
-
-
-
-
-
-
-
-
-
-<div class="w-16 h-16 text-center"><img src="https://spec.utxo.cz/23/photos/speakers/jiri-cepelka-web.jpg" class="w-16 h-16 rounded-lg m-auto" alt="Jiří Čepelka"></div>
-
-
-
-
-
-
-
-
-
-
-
-
-<div class="w-16 h-16 text-center"><img src="https://spec.utxo.cz/23/photos/speakers/vojtech-pour-web.jpg" class="w-16 h-16 rounded-lg m-auto" alt="Vojtěch Pour"></div>
 
 
 
@@ -486,46 +447,20 @@
 
 
 
+<div class="w-16 h-16 text-center"><img src="https://spec.utxo.cz/23/photos/speakers/petr-mensik-web.jpg" class="w-16 h-16 rounded-lg m-auto" alt="Petr Menšík"></div>
+
+
+
+
+
+
+
+
+
+
+
+
 <div class="w-16 h-16 text-center"><img src="https://spec.utxo.cz/23/photos/speakers/tree-twitter.jpg" class="w-16 h-16 rounded-lg m-auto" alt="tree"></div>
-
-
-
-
-
-
-
-
-
-
-
-
-<div class="w-16 h-16 text-center"><img src="https://spec.utxo.cz/23/photos/speakers/frantisek-kudrna-web.jpg" class="w-16 h-16 rounded-lg m-auto" alt="František Kudrna"></div>
-
-
-
-
-
-
-
-
-
-
-
-
-<div class="w-16 h-16 text-center"><img src="https://spec.utxo.cz/23/photos/speakers/jakub-jedlinsky-web.jpg" class="w-16 h-16 rounded-lg m-auto" alt="Jakub Jedlinský"></div>
-
-
-
-
-
-
-
-
-
-
-
-
-<div class="w-16 h-16 text-center"><img src="https://spec.utxo.cz/23/photos/speakers/stanislav-simek-web.jpg" class="w-16 h-16 rounded-lg m-auto" alt="Stanislav Šimek"></div>
 
 
 
@@ -551,7 +486,7 @@
 
 
 
-<div class="w-16 h-16 text-center"><img src="https://spec.utxo.cz/23/photos/speakers/radek-svarz-web.jpg" class="w-16 h-16 rounded-lg m-auto" alt="Radek Švarz"></div>
+<div class="w-16 h-16 text-center"><img src="https://spec.utxo.cz/23/photos/speakers/jiri-cepelka-web.jpg" class="w-16 h-16 rounded-lg m-auto" alt="Jiří Čepelka"></div>
 
 
 
@@ -564,7 +499,7 @@
 
 
 
-<div class="w-16 h-16 text-center"><img src="https://spec.utxo.cz/23/photos/speakers/petr-sanetrnik-web.jpg" class="w-16 h-16 rounded-lg m-auto" alt="Petr Sanetrník"></div>
+<div class="w-16 h-16 text-center"><img src="https://spec.utxo.cz/23/photos/speakers/jiri-skrivan-web.jpg" class="w-16 h-16 rounded-lg m-auto" alt="Jiří Skřivan"></div>
 
 
 
@@ -577,20 +512,7 @@
 
 
 
-<div class="w-16 h-16 text-center"><img src="https://spec.utxo.cz/23/photos/speakers/petr-mensik-web.jpg" class="w-16 h-16 rounded-lg m-auto" alt="Petr Menšík"></div>
-
-
-
-
-
-
-
-
-
-
-
-
-<div class="w-16 h-16 text-center"><img src="https://spec.utxo.cz/23/photos/speakers/jan-zibner-web.jpg" class="w-16 h-16 rounded-lg m-auto" alt="Jan Zibner"></div>
+<div class="w-16 h-16 text-center"><img src="https://spec.utxo.cz/23/photos/speakers/vojtech-pour-web.jpg" class="w-16 h-16 rounded-lg m-auto" alt="Vojtěch Pour"></div>
 
 
 
@@ -616,46 +538,7 @@
 
 
 
-<div class="w-16 h-16 text-center"><img src="https://spec.utxo.cz/23/photos/speakers/fetyas-web.jpg" class="w-16 h-16 rounded-lg m-auto" alt="Tomáš Kalabis"></div>
-
-
-
-
-
-
-
-
-
-
-
-
-<div class="w-16 h-16 text-center"><img src="https://spec.utxo.cz/23/photos/speakers/jan-21m-twitter.jpg" class="w-16 h-16 rounded-lg m-auto" alt="Jan Kohout"></div>
-
-
-
-
-
-
-
-
-
-
-
-
-<div class="w-16 h-16 text-center"><img src="https://spec.utxo.cz/23/photos/speakers/tereza-starostova-twitter.jpg" class="w-16 h-16 rounded-lg m-auto" alt="Tereza Starostová"></div>
-
-
-
-
-
-
-
-
-
-
-
-
-<div class="w-16 h-16 text-center"><img src="https://spec.utxo.cz/23/photos/speakers/josef-gattermayer-web.jpg" class="w-16 h-16 rounded-lg m-auto" alt="Josef Gattermayer"></div>
+<div class="w-16 h-16 text-center"><img src="https://spec.utxo.cz/23/photos/speakers/adam-hrazdira-web.png" class="w-16 h-16 rounded-lg m-auto" alt="Adam Hrazdira"></div>
 
 
 
@@ -681,7 +564,7 @@
 
 
 
-<div class="w-16 h-16 text-center"><img src="https://spec.utxo.cz/23/photos/speakers/jan-cerny-web.jpg" class="w-16 h-16 rounded-lg m-auto" alt="Jan Černý"></div>
+<div class="w-16 h-16 text-center"><img src="https://spec.utxo.cz/23/photos/speakers/hynek-jina-web.jpg" class="w-16 h-16 rounded-lg m-auto" alt="Hynek Jína"></div>
 
 
 
@@ -694,7 +577,7 @@
 
 
 
-<div class="w-16 h-16 text-center"><img src="https://spec.utxo.cz/23/photos/speakers/adam-hrazdira-web.png" class="w-16 h-16 rounded-lg m-auto" alt="Adam Hrazdira"></div>
+<div class="w-16 h-16 text-center"><img src="https://spec.utxo.cz/23/photos/speakers/tereza-starostova-twitter.jpg" class="w-16 h-16 rounded-lg m-auto" alt="Tereza Starostová"></div>
 
 
 
@@ -720,13 +603,134 @@
 
 
 
+<div class="w-16 h-16 text-center"><img src="https://spec.utxo.cz/23/photos/speakers/josef-gattermayer-web.jpg" class="w-16 h-16 rounded-lg m-auto" alt="Josef Gattermayer"></div>
+
+
+
+
+
+
+
+
+
+
+
+
+<div class="w-16 h-16 text-center"><img src="https://spec.utxo.cz/23/photos/speakers/petr-sanetrnik-web.jpg" class="w-16 h-16 rounded-lg m-auto" alt="Petr Sanetrník"></div>
+
+
+
+
+
+
+
+
+
+
+
+
+<div class="w-16 h-16 text-center"><img src="https://spec.utxo.cz/23/photos/speakers/frantisek-kudrna-web.jpg" class="w-16 h-16 rounded-lg m-auto" alt="František Kudrna"></div>
+
+
+
+
+
+
+
+
+
+
+
+
 <div class="w-16 h-16 text-center"><img src="https://spec.utxo.cz/23/photos/speakers/martin-janik-web.jpg" class="w-16 h-16 rounded-lg m-auto" alt="Martin Janík"></div>
 
 
 
 
 
-</div></div></section>
+
+
+
+
+
+
+
+<div class="w-16 h-16 text-center"><img src="https://spec.utxo.cz/23/photos/speakers/jakub-jedlinsky-web.jpg" class="w-16 h-16 rounded-lg m-auto" alt="Jakub Jedlinský"></div>
+
+
+
+
+
+
+
+
+
+
+
+
+<div class="w-16 h-16 text-center"><img src="https://spec.utxo.cz/23/photos/speakers/jan-21m-twitter.jpg" class="w-16 h-16 rounded-lg m-auto" alt="Jan Kohout"></div>
+
+
+
+
+
+
+
+
+
+
+
+
+<div class="w-16 h-16 text-center"><img src="https://spec.utxo.cz/23/photos/speakers/stanislav-simek-web.jpg" class="w-16 h-16 rounded-lg m-auto" alt="Stanislav Šimek"></div>
+
+
+
+
+
+
+
+
+
+
+
+
+<div class="w-16 h-16 text-center"><img src="https://spec.utxo.cz/23/photos/speakers/jan-zibner-web.jpg" class="w-16 h-16 rounded-lg m-auto" alt="Jan Zibner"></div>
+
+
+
+
+
+
+
+
+
+
+
+
+<div class="w-16 h-16 text-center"><img src="https://spec.utxo.cz/23/photos/speakers/fetyas-web.jpg" class="w-16 h-16 rounded-lg m-auto" alt="Tomáš Kalabis"></div>
+
+
+
+
+
+
+
+
+
+
+
+
+<div class="w-16 h-16 text-center"><img src="https://spec.utxo.cz/23/photos/speakers/radek-svarz-web.jpg" class="w-16 h-16 rounded-lg m-auto" alt="Radek Švarz"></div>
+
+
+
+
+
+</div></div>
+      <div class="text-center text-custom-darkpurple text-xl">... a mnoho dalších</div></section>
+
+<h2 class="text-2xl uppercase font-bold text-center text-custom-darkpurple my-4 md:mt-8">Loňský ročník</h2>
+<div class="text-center mx-auto mt-4 mb-16 w-full md:w-1/2 px-2"><iframe class="w-full aspect-video" src="https://www.youtube.com/embed/MfxBGAtakl4" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe></div>
 
 <section class="bg-utxo-gradient"><div class="relative mx-auto py-6 px-6 max-w-7xl"><div class="py-6 md:py-10 md:flex gap-12"><div class="block flex-1"><img src="/photos/optimized/gabriel-loci.jpeg" class="flex rounded-xl shadow-xl" alt="Gabriel Loci">
         <div class="flex mt-3 gap-3"><div class="w-1/2"><img src="/photos/optimized/rajska-zahrada.jpeg" class="rounded-lg shadow-lg" alt="Gabriel Loci - Rajská zahrada"></div>
@@ -751,7 +755,7 @@
     
     
     <div class="mt-10 text-center">Komunity</div>
-    <div class="mt-6 flex flex-wrap gap-6 justify-center"><div><div class="tooltip-wrapper svelte-uasnpl"><span class="tooltip-slot svelte-uasnpl"><a href="https://twitter.com/gweicz" target="_blank" rel="noreferrer"><div class="w-20 shadow-lg text-center m-auto"><img src="https://spec.utxo.cz/23/photos/partners/gweicz-twitter.jpg" class="w-20 shadow-lg rounded-xl m-auto" alt="Gwei.cz"></div>
+    <div class="mt-6 flex flex-wrap gap-6 justify-center"><div><div class="tooltip-wrapper svelte-uasnpl"><span class="tooltip-slot svelte-uasnpl"><a href="https://twitter.com/gweicz" target="_blank" rel="noreferrer"><div class="w-20 shadow-lg rounded-xl text-center m-auto"><img src="https://spec.utxo.cz/23/photos/partners/gweicz-twitter.jpg" class="w-20 shadow-lg rounded-xl rounded-xl m-auto" alt="Gwei.cz"></div>
 
 
 
@@ -766,9 +770,9 @@
 
 </a>
           </span>
-  <div class="tooltip svelte-uasnpl    bottom"><div class="default-tip svelte-uasnpl" style="background-color: #393F67;"><!-- HTML_TAG_START -->Gwei.cz<!-- HTML_TAG_END --></div></div>
+  <div class="tooltip svelte-uasnpl    bottom"><div class="default-tip svelte-uasnpl" style="background-color: #462a4e;"><!-- HTML_TAG_START -->Gwei.cz<!-- HTML_TAG_END --></div></div>
 </div>
-        </div><div><div class="tooltip-wrapper svelte-uasnpl"><span class="tooltip-slot svelte-uasnpl"><a href="https://twitter.com/holkyvkryptu" target="_blank" rel="noreferrer"><div class="w-20 shadow-lg text-center m-auto"><img src="https://spec.utxo.cz/23/photos/partners/holky-v-kryptu-twitter.jpg" class="w-20 shadow-lg rounded-xl m-auto" alt="Holky v kryptu"></div>
+        </div><div><div class="tooltip-wrapper svelte-uasnpl"><span class="tooltip-slot svelte-uasnpl"><a href="https://twitter.com/holkyvkryptu" target="_blank" rel="noreferrer"><div class="w-20 shadow-lg rounded-xl text-center m-auto"><img src="https://spec.utxo.cz/23/photos/partners/holky-v-kryptu-twitter.jpg" class="w-20 shadow-lg rounded-xl rounded-xl m-auto" alt="Holky v kryptu"></div>
 
 
 
@@ -783,7 +787,7 @@
 
 </a>
           </span>
-  <div class="tooltip svelte-uasnpl    bottom"><div class="default-tip svelte-uasnpl" style="background-color: #393F67;"><!-- HTML_TAG_START -->Holky v kryptu<!-- HTML_TAG_END --></div></div>
+  <div class="tooltip svelte-uasnpl    bottom"><div class="default-tip svelte-uasnpl" style="background-color: #462a4e;"><!-- HTML_TAG_START -->Holky v kryptu<!-- HTML_TAG_END --></div></div>
 </div>
         </div></div>
     </div></section>
@@ -808,7 +812,7 @@
         </div>
         <div class="mt-4"><a href="https://docs.utxo.cz" class="hover:text-custom-green" target="_blank" rel="noreferrer"><i class="fas fa-book"></i>  Dokumentace</a></div></div>
       <div class="sm:mt-0 mt-6 sm:w-1/3 mr-2"></div></div>
-    <div class="relative mx-auto px-6 pt-10 pb-6 max-w-6xl text-xs opacity-50 sm:flex"><div class="flex-1 mt-2 mb-2"><i class="fas fa-heart text-red-500"></i> S láskou organizuje
+    <div class="relative mx-auto px-6 pt-10 pb-6 max-w-7xl text-xs opacity-50 sm:flex"><div class="flex-1 mt-2 mb-2"><i class="fas fa-heart text-red-500"></i> S láskou organizuje
         <a href="https://utxo.foundation" class="underline hover:no-underline" target="_blank" rel="noreferrer">UTXO Foundation, z.s.</a></div>
       <div><a href="https://github.com/utxo-foundation/utxo23-web" target="_blank" rel="noreferrer"><span class="font-bold">v1.9.0</span></a>
         | powered by
@@ -817,14 +821,14 @@
         <a href="https://www.ppmedia.cz/" target="_blank" rel="noreferrer"><img src="/img/pen-production-logo.svg" class="w-28 inline-block pb-2 ml-1" alt="Pen&Production"></a></div></div></div></div>
 
 
-		<script type="module" data-sveltekit-hydrate="15uuujx">
-			import { start } from "./_app/immutable/start-5296e84f.js";
+		<script type="module" data-sveltekit-hydrate="bklmfo">
+			import { start } from "./_app/immutable/start-31ebb8c6.js";
 
 			start({
 				env: {},
 				paths: {"assets":"","base":""},
-				target: document.querySelector('[data-sveltekit-hydrate="15uuujx"]').parentNode,
-				version: "1677486698101",
+				target: document.querySelector('[data-sveltekit-hydrate="bklmfo"]').parentNode,
+				version: "1677488914716",
 				hydrate: {
 					node_ids: [0, 2],
 					data: [null,null],
