--- a/lide/adam-hrazdira.html
+++ b/lide/adam-hrazdira.html
@@ -51,14 +51,14 @@
     }
     </script>
     <meta http-equiv="content-security-policy" content="">
-		<link href="../_app/immutable/assets/_layout-63d87ff5.css" rel="stylesheet">
+		<link href="../_app/immutable/assets/_layout-91c570b8.css" rel="stylesheet">
 		<link href="../_app/immutable/assets/_page-a3426dfb.css" rel="stylesheet">
-		<link rel="modulepreload" href="../_app/immutable/start-5296e84f.js">
+		<link rel="modulepreload" href="../_app/immutable/start-31ebb8c6.js">
 		<link rel="modulepreload" href="../_app/immutable/chunks/index-f71fcd82.js">
 		<link rel="modulepreload" href="../_app/immutable/chunks/singletons-b6e546a3.js">
 		<link rel="modulepreload" href="../_app/immutable/chunks/index-4bfa7427.js">
 		<link rel="modulepreload" href="../_app/immutable/chunks/control-e7f5239e.js">
-		<link rel="modulepreload" href="../_app/immutable/components/pages/_layout.svelte-30edec58.js">
+		<link rel="modulepreload" href="../_app/immutable/components/pages/_layout.svelte-9096e973.js">
 		<link rel="modulepreload" href="../_app/immutable/chunks/stores-d4fc842c.js">
 		<link rel="modulepreload" href="../_app/immutable/chunks/stores-c713c1dd.js">
 		<link rel="modulepreload" href="../_app/immutable/chunks/Transition-adb530ea.js">
@@ -138,7 +138,7 @@
         </div>
         <div class="mt-4"><a href="https://docs.utxo.cz" class="hover:text-custom-green" target="_blank" rel="noreferrer"><i class="fas fa-book"></i>  Dokumentace</a></div></div>
       <div class="sm:mt-0 mt-6 sm:w-1/3 mr-2"></div></div>
-    <div class="relative mx-auto px-6 pt-10 pb-6 max-w-6xl text-xs opacity-50 sm:flex"><div class="flex-1 mt-2 mb-2"><i class="fas fa-heart text-red-500"></i> S láskou organizuje
+    <div class="relative mx-auto px-6 pt-10 pb-6 max-w-7xl text-xs opacity-50 sm:flex"><div class="flex-1 mt-2 mb-2"><i class="fas fa-heart text-red-500"></i> S láskou organizuje
         <a href="https://utxo.foundation" class="underline hover:no-underline" target="_blank" rel="noreferrer">UTXO Foundation, z.s.</a></div>
       <div><a href="https://github.com/utxo-foundation/utxo23-web" target="_blank" rel="noreferrer"><span class="font-bold">v1.9.0</span></a>
         | powered by
@@ -147,14 +147,14 @@
         <a href="https://www.ppmedia.cz/" target="_blank" rel="noreferrer"><img src="/img/pen-production-logo.svg" class="w-28 inline-block pb-2 ml-1" alt="Pen&Production"></a></div></div></div></div>
 
 
-		<script type="module" data-sveltekit-hydrate="1q6cmpy">
-			import { start } from "../_app/immutable/start-5296e84f.js";
+		<script type="module" data-sveltekit-hydrate="1mq1ppj">
+			import { start } from "../_app/immutable/start-31ebb8c6.js";
 
 			start({
 				env: {},
 				paths: {"assets":"","base":""},
-				target: document.querySelector('[data-sveltekit-hydrate="1q6cmpy"]').parentNode,
-				version: "1677486698101",
+				target: document.querySelector('[data-sveltekit-hydrate="1mq1ppj"]').parentNode,
+				version: "1677488914716",
 				hydrate: {
 					node_ids: [0, 7],
 					data: [null,null],
