--- a/gratulujeme.html
+++ b/gratulujeme.html
@@ -52,7 +52,7 @@
     </script>
     <meta http-equiv="content-security-policy" content="">
 		<link href="./_app/immutable/assets/_layout-91c570b8.css" rel="stylesheet">
-		<link rel="modulepreload" href="./_app/immutable/start-31ebb8c6.js">
+		<link rel="modulepreload" href="./_app/immutable/start-8bca32c1.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/index-f71fcd82.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/singletons-b6e546a3.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/index-4bfa7427.js">
@@ -64,7 +64,7 @@
 		<link rel="modulepreload" href="./_app/immutable/modules/pages/_layout.js-3beef184.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/bundle-6957d3f5.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/_layout-973f4a48.js">
-		<link rel="modulepreload" href="./_app/immutable/components/pages/gratulujeme/_page.svelte-56428bcd.js">
+		<link rel="modulepreload" href="./_app/immutable/components/pages/gratulujeme/_page.svelte-ece261b6.js">
 	</head>
   <body data-sveltekit-preload-data="hover">
     <div style="display: contents"  class="h-full w-full">
@@ -95,10 +95,10 @@
 
       <main><div><section class="relative mx-auto py-6 sm:py-10 px-6 max-w-6xl text-blue-web"><div class=""><div class="text-3xl lg:text-4xl text-center">🎉 Gratulujeme k nákupu vstupenek!
     </div>
-    <div class="mt-4 text-lg text-center">Najdeš je v mailu nebo na stránce <a href="/vstupenky" class="underline hover:no-underline">vstupenky</a></div>
-    <div class="flex mt-6"><img class="m-auto w-auto lg:max-w-3xl" src="/gifs/funny-celebrate-5.gif"></div>
-    <div class="mt-10 text-xl text-center mt-6">Co teď? Poděl se o tu radost s ostatními <a href="https://twitter.com/intent/tweet?text=M%C3%A1m%20l%C3%ADstek%20na%20%40utxoprague%20%F0%9F%8E%89%20Poj%C4%8F%20taky%21%0A%20%23utxo22" class="underline hover:no-underline" target="_blank">tweetem</a></div>
-    <div class="text-xl text-center mt-6">Prohlédni si <a href="/program" class="underline hover:no-underline">aktuální program</a></div>
+    
+    <div class="flex mt-6"><img class="m-auto w-auto lg:max-w-3xl" src="/gifs/funny-celebrate-9.gif"></div>
+    <div class="mt-10 text-xl text-center mt-6">Co teď? Poděl se o tu radost s ostatními <a href="https://twitter.com/intent/tweet?text=M%C3%A1m%20l%C3%ADstek%20na%20%40utxoprague%20%F0%9F%8E%89%20Poj%C4%8F%20taky%21%20utxo.cz%20%23utxo23%20" class="underline hover:no-underline" target="_blank">tweetem</a></div>
+    
     <div class="text-xl text-center mt-6">Sleduj novinky na <a href="https://twitter.com/utxoprague" class="underline hover:no-underline" target="_blank">Twitteru</a> <i class="fa-brands fa-twitter"></i></div></div></section></div></main></div>
     <div class="bg-gradient-to-b from-custom-darkpurple to-custom-darkestpurple text-white print:hidden"><div class="relative mx-auto px-6 pt-10 pb-2 sm:pb-6 max-w-7xl sm:flex pr-4"><div class="flex-1"><div><a href="/"><img src="/img/logo.svg" alt="UTXO.23" class="w-32"></a></div>
         <div class="mt-4 font-semibold">3.-4. červen 2023 @ Gabriel Loci, Praha
@@ -116,14 +116,14 @@
         <a href="https://www.ppmedia.cz/" target="_blank" rel="noreferrer"><img src="/img/pen-production-logo.svg" class="w-28 inline-block pb-2 ml-1" alt="Pen&Production"></a></div></div></div></div>
 
 
-		<script type="module" data-sveltekit-hydrate="jfpkla">
-			import { start } from "./_app/immutable/start-31ebb8c6.js";
+		<script type="module" data-sveltekit-hydrate="7relua">
+			import { start } from "./_app/immutable/start-8bca32c1.js";
 
 			start({
 				env: {},
 				paths: {"assets":"","base":""},
-				target: document.querySelector('[data-sveltekit-hydrate="jfpkla"]').parentNode,
-				version: "1677489507314",
+				target: document.querySelector('[data-sveltekit-hydrate="7relua"]').parentNode,
+				version: "1677490718179",
 				hydrate: {
 					node_ids: [0, 5],
 					data: [null,null],
