--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
     <meta http-equiv="content-security-policy" content="">
 		<link href="./_app/immutable/assets/_layout-91c570b8.css" rel="stylesheet">
 		<link href="./_app/immutable/assets/SvelteTooltip-456285a5.css" rel="stylesheet">
-		<link rel="modulepreload" href="./_app/immutable/start-31ebb8c6.js">
+		<link rel="modulepreload" href="./_app/immutable/start-8bca32c1.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/index-f71fcd82.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/singletons-b6e546a3.js">
 		<link rel="modulepreload" href="./_app/immutable/chunks/index-4bfa7427.js">
@@ -408,7 +408,7 @@
 
 
 
-<div class="w-16 h-16 text-center"><img src="https://spec.utxo.cz/23/photos/speakers/hynek-jina-web.jpg" class="w-16 h-16 rounded-lg m-auto" alt="Hynek Jína"></div>
+<div class="w-16 h-16 text-center"><img src="https://spec.utxo.cz/23/photos/speakers/jan-21m-twitter.jpg" class="w-16 h-16 rounded-lg m-auto" alt="Jan Kohout"></div>
 
 
 
@@ -421,137 +421,7 @@
 
 
 
-<div class="w-16 h-16 text-center"><img src="https://spec.utxo.cz/23/photos/speakers/vojtech-pour-web.jpg" class="w-16 h-16 rounded-lg m-auto" alt="Vojtěch Pour"></div>
-
-
-
-
-
-
-
-
-
-
-
-
-<div class="w-16 h-16 text-center"><img src="https://spec.utxo.cz/23/photos/speakers/martin-bok-web.png" class="w-16 h-16 rounded-lg m-auto" alt="Martin Bok"></div>
-
-
-
-
-
-
-
-
-
-
-
-
-<div class="w-16 h-16 text-center"><img src="https://spec.utxo.cz/23/photos/speakers/jiri-skrivan-web.jpg" class="w-16 h-16 rounded-lg m-auto" alt="Jiří Skřivan"></div>
-
-
-
-
-
-
-
-
-
-
-
-
-<div class="w-16 h-16 text-center"><img src="https://spec.utxo.cz/23/photos/speakers/tree-twitter.jpg" class="w-16 h-16 rounded-lg m-auto" alt="tree"></div>
-
-
-
-
-
-
-
-
-
-
-
-
-<div class="w-16 h-16 text-center"><img src="https://spec.utxo.cz/23/photos/speakers/jacob-jelen-twitter.jpg" class="w-16 h-16 rounded-lg m-auto" alt="Jacob Jelen"></div>
-
-
-
-
-
-
-
-
-
-
-
-
-<div class="w-16 h-16 text-center"><img src="https://spec.utxo.cz/23/photos/speakers/huge-web.jpg" class="w-16 h-16 rounded-lg m-auto" alt="Huge"></div>
-
-
-
-
-
-
-
-
-
-
-
-
-<div class="w-16 h-16 text-center"><img src="https://spec.utxo.cz/23/photos/speakers/frantisek-kudrna-web.jpg" class="w-16 h-16 rounded-lg m-auto" alt="František Kudrna"></div>
-
-
-
-
-
-
-
-
-
-
-
-
-<div class="w-16 h-16 text-center"><img src="https://spec.utxo.cz/23/photos/speakers/petr-hotovec-web.jpg" class="w-16 h-16 rounded-lg m-auto" alt="Petr Hotovec"></div>
-
-
-
-
-
-
-
-
-
-
-
-
-<div class="w-16 h-16 text-center"><img src="https://spec.utxo.cz/23/photos/speakers/adam-sobotka-web.jpg" class="w-16 h-16 rounded-lg m-auto" alt="Adam Sobotka"></div>
-
-
-
-
-
-
-
-
-
-
-
-
-<div class="w-16 h-16 text-center"><img src="https://spec.utxo.cz/23/photos/speakers/radek-svarz-web.jpg" class="w-16 h-16 rounded-lg m-auto" alt="Radek Švarz"></div>
-
-
-
-
-
-
-
-
-
-
-
-
-<div class="w-16 h-16 text-center"><img src="https://spec.utxo.cz/23/photos/speakers/martin-janik-web.jpg" class="w-16 h-16 rounded-lg m-auto" alt="Martin Janík"></div>
+<div class="w-16 h-16 text-center"><img src="https://spec.utxo.cz/23/photos/speakers/jakub-jedlinsky-web.jpg" class="w-16 h-16 rounded-lg m-auto" alt="Jakub Jedlinský"></div>
 
 
 
@@ -577,85 +447,7 @@
 
 
 
-<div class="w-16 h-16 text-center"><img src="https://spec.utxo.cz/23/photos/speakers/jan-21m-twitter.jpg" class="w-16 h-16 rounded-lg m-auto" alt="Jan Kohout"></div>
-
-
-
-
-
-
-
-
-
-
-
-
-<div class="w-16 h-16 text-center"><img src="https://spec.utxo.cz/23/photos/speakers/jan-cerny-web.jpg" class="w-16 h-16 rounded-lg m-auto" alt="Jan Černý"></div>
-
-
-
-
-
-
-
-
-
-
-
-
-<div class="w-16 h-16 text-center"><img src="https://spec.utxo.cz/23/photos/speakers/josef-gattermayer-web.jpg" class="w-16 h-16 rounded-lg m-auto" alt="Josef Gattermayer"></div>
-
-
-
-
-
-
-
-
-
-
-
-
-<div class="w-16 h-16 text-center"><img src="https://spec.utxo.cz/23/photos/speakers/ondrej-rehacek-web.jpg" class="w-16 h-16 rounded-lg m-auto" alt="Ondřej Řeháček"></div>
-
-
-
-
-
-
-
-
-
-
-
-
-<div class="w-16 h-16 text-center"><img src="https://spec.utxo.cz/23/photos/speakers/adam-hrazdira-web.png" class="w-16 h-16 rounded-lg m-auto" alt="Adam Hrazdira"></div>
-
-
-
-
-
-
-
-
-
-
-
-
-<div class="w-16 h-16 text-center"><img src="https://spec.utxo.cz/23/photos/speakers/fetyas-web.jpg" class="w-16 h-16 rounded-lg m-auto" alt="Tomáš Kalabis"></div>
-
-
-
-
-
-
-
-
-
-
-
-
-<div class="w-16 h-16 text-center"><img src="https://spec.utxo.cz/23/photos/speakers/jan-zibner-web.jpg" class="w-16 h-16 rounded-lg m-auto" alt="Jan Zibner"></div>
+<div class="w-16 h-16 text-center"><img src="https://spec.utxo.cz/23/photos/speakers/huge-web.jpg" class="w-16 h-16 rounded-lg m-auto" alt="Huge"></div>
 
 
 
@@ -681,7 +473,20 @@
 
 
 
-<div class="w-16 h-16 text-center"><img src="https://spec.utxo.cz/23/photos/speakers/stanislav-simek-web.jpg" class="w-16 h-16 rounded-lg m-auto" alt="Stanislav Šimek"></div>
+<div class="w-16 h-16 text-center"><img src="https://spec.utxo.cz/23/photos/speakers/fetyas-web.jpg" class="w-16 h-16 rounded-lg m-auto" alt="Tomáš Kalabis"></div>
+
+
+
+
+
+
+
+
+
+
+
+
+<div class="w-16 h-16 text-center"><img src="https://spec.utxo.cz/23/photos/speakers/vojtech-pour-web.jpg" class="w-16 h-16 rounded-lg m-auto" alt="Vojtěch Pour"></div>
 
 
 
@@ -707,20 +512,215 @@
 
 
 
+<div class="w-16 h-16 text-center"><img src="https://spec.utxo.cz/23/photos/speakers/jacob-jelen-twitter.jpg" class="w-16 h-16 rounded-lg m-auto" alt="Jacob Jelen"></div>
+
+
+
+
+
+
+
+
+
+
+
+
+<div class="w-16 h-16 text-center"><img src="https://spec.utxo.cz/23/photos/speakers/petr-hotovec-web.jpg" class="w-16 h-16 rounded-lg m-auto" alt="Petr Hotovec"></div>
+
+
+
+
+
+
+
+
+
+
+
+
+<div class="w-16 h-16 text-center"><img src="https://spec.utxo.cz/23/photos/speakers/tree-twitter.jpg" class="w-16 h-16 rounded-lg m-auto" alt="tree"></div>
+
+
+
+
+
+
+
+
+
+
+
+
+<div class="w-16 h-16 text-center"><img src="https://spec.utxo.cz/23/photos/speakers/jan-cerny-web.jpg" class="w-16 h-16 rounded-lg m-auto" alt="Jan Černý"></div>
+
+
+
+
+
+
+
+
+
+
+
+
+<div class="w-16 h-16 text-center"><img src="https://spec.utxo.cz/23/photos/speakers/martin-janik-web.jpg" class="w-16 h-16 rounded-lg m-auto" alt="Martin Janík"></div>
+
+
+
+
+
+
+
+
+
+
+
+
+<div class="w-16 h-16 text-center"><img src="https://spec.utxo.cz/23/photos/speakers/josef-gattermayer-web.jpg" class="w-16 h-16 rounded-lg m-auto" alt="Josef Gattermayer"></div>
+
+
+
+
+
+
+
+
+
+
+
+
+<div class="w-16 h-16 text-center"><img src="https://spec.utxo.cz/23/photos/speakers/adam-hrazdira-web.png" class="w-16 h-16 rounded-lg m-auto" alt="Adam Hrazdira"></div>
+
+
+
+
+
+
+
+
+
+
+
+
+<div class="w-16 h-16 text-center"><img src="https://spec.utxo.cz/23/photos/speakers/ondrej-rehacek-web.jpg" class="w-16 h-16 rounded-lg m-auto" alt="Ondřej Řeháček"></div>
+
+
+
+
+
+
+
+
+
+
+
+
+<div class="w-16 h-16 text-center"><img src="https://spec.utxo.cz/23/photos/speakers/radek-svarz-web.jpg" class="w-16 h-16 rounded-lg m-auto" alt="Radek Švarz"></div>
+
+
+
+
+
+
+
+
+
+
+
+
+<div class="w-16 h-16 text-center"><img src="https://spec.utxo.cz/23/photos/speakers/jiri-skrivan-web.jpg" class="w-16 h-16 rounded-lg m-auto" alt="Jiří Skřivan"></div>
+
+
+
+
+
+
+
+
+
+
+
+
+<div class="w-16 h-16 text-center"><img src="https://spec.utxo.cz/23/photos/speakers/hynek-jina-web.jpg" class="w-16 h-16 rounded-lg m-auto" alt="Hynek Jína"></div>
+
+
+
+
+
+
+
+
+
+
+
+
+<div class="w-16 h-16 text-center"><img src="https://spec.utxo.cz/23/photos/speakers/frantisek-kudrna-web.jpg" class="w-16 h-16 rounded-lg m-auto" alt="František Kudrna"></div>
+
+
+
+
+
+
+
+
+
+
+
+
+<div class="w-16 h-16 text-center"><img src="https://spec.utxo.cz/23/photos/speakers/jan-zibner-web.jpg" class="w-16 h-16 rounded-lg m-auto" alt="Jan Zibner"></div>
+
+
+
+
+
+
+
+
+
+
+
+
+<div class="w-16 h-16 text-center"><img src="https://spec.utxo.cz/23/photos/speakers/stanislav-simek-web.jpg" class="w-16 h-16 rounded-lg m-auto" alt="Stanislav Šimek"></div>
+
+
+
+
+
+
+
+
+
+
+
+
+<div class="w-16 h-16 text-center"><img src="https://spec.utxo.cz/23/photos/speakers/martin-bok-web.png" class="w-16 h-16 rounded-lg m-auto" alt="Martin Bok"></div>
+
+
+
+
+
+
+
+
+
+
+
+
+<div class="w-16 h-16 text-center"><img src="https://spec.utxo.cz/23/photos/speakers/adam-sobotka-web.jpg" class="w-16 h-16 rounded-lg m-auto" alt="Adam Sobotka"></div>
+
+
+
+
+
+
+
+
+
+
+
+
 <div class="w-16 h-16 text-center"><img src="https://spec.utxo.cz/23/photos/speakers/petr-sanetrnik-web.jpg" class="w-16 h-16 rounded-lg m-auto" alt="Petr Sanetrník"></div>
-
-
-
-
-
-
-
-
-
-
-
-
-<div class="w-16 h-16 text-center"><img src="https://spec.utxo.cz/23/photos/speakers/jakub-jedlinsky-web.jpg" class="w-16 h-16 rounded-lg m-auto" alt="Jakub Jedlinský"></div>
 
 
 
@@ -821,14 +821,14 @@
         <a href="https://www.ppmedia.cz/" target="_blank" rel="noreferrer"><img src="/img/pen-production-logo.svg" class="w-28 inline-block pb-2 ml-1" alt="Pen&Production"></a></div></div></div></div>
 
 
-		<script type="module" data-sveltekit-hydrate="12g73pw">
-			import { start } from "./_app/immutable/start-31ebb8c6.js";
+		<script type="module" data-sveltekit-hydrate="1ujhhbo">
+			import { start } from "./_app/immutable/start-8bca32c1.js";
 
 			start({
 				env: {},
 				paths: {"assets":"","base":""},
-				target: document.querySelector('[data-sveltekit-hydrate="12g73pw"]').parentNode,
-				version: "1677489507314",
+				target: document.querySelector('[data-sveltekit-hydrate="1ujhhbo"]').parentNode,
+				version: "1677490718179",
 				hydrate: {
 					node_ids: [0, 2],
 					data: [null,null],
